# URLParsing

./: Dockerfile  docker-compose.yml  pyproject.toml
Parse/: db.sqlite3  manage.py
Parse/Parse/: asgi.py  settings.py  urls.py  wsgi.py
Parse/main/: admin.py  filters.py  managers.py  models.py  permissions.py  serializers.py  services.py  signals.py  tests.py  views.py
Parse/main/management/commands/: stats.py
Parse/main/migrations/: 0001_initial.py
